[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.6"
markdown = "1.0.0-alpha.7"
notify = "6.1.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
thiserror = "1.0.40"
time = { version = "0.3.20", features = ["serde", "serde-human-readable"] }
walkdir = "2.3.3"
